--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>The Bahamas</title>
+    <title>The Bahamas!!</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    
+
   </body>
 </html>
