--- a/registration.html
+++ b/registration.html
@@ -19,7 +19,7 @@
 
 <body>
   <div class="headerText">
-    <h1>The Bahamas</h1>
+    <h1>Book Now!!!</h1>
   </div>
   <div class="container">
     <div class="information">
