Book now link working

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-
+    <div class="container">
+      <div class="headerText">
+        <h1>The Bahamas</h1>
+        <a href="registration.html">Book Now</a>
+      </div>
+    </div>
   </body>
 </html>
