Commit before i leave class MUAHAHAAH

--- a/registration.html
+++ b/registration.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Bahamas Travel</title>
+  <title>Book Now!!!!</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -19,7 +19,8 @@
 
 <body>
   <div class="headerText">
-    <h1>Book Now!!!</h1>
+    <h1>The Bahamas</h1>
+    <a href="index.html"> Home </a>
   </div>
   <div class="container">
     <div class="information">
