--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <body>
     <div class="container">
       <div class="headerText">
-        <h1>The Bahamas</h1>
-        <a href="registration.html">Book Now</a>
+          <h1>The Bahamas</h1>
+        <div class="navbar">
+          <a href="index.html" >Home</a> |<a href="registration.html">Book Now</a>
       </div>
     </div>
+  </div>
   </body>
 </html>
