--- a/checkout.html
+++ b/checkout.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Checkout</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="navbar">
@@ -41,8 +43,7 @@
             <h3>Payment</h3>
             <label class="checkout" for="fname">Accepted Cards</label>
             <div class="icon-container">
-              <img
-                        src="https://www.merchantequip.com/image/?logos=v|m|a|d&height=32" alt="Merchant Equipment Store Credit Card Logos"/>
+              <img alt="Credit Card Logos" title="Credit Card Logos" src="https://www.3dcart.com/images/credit-card-logos/cc-lg-4.png" width="413" height="59" border="0" />
             </div>
             <label class="checkout" for="cname">Name on Card</label>
             <input type="text" id="cname" name="cardname" placeholder="John More Doe">
@@ -67,12 +68,11 @@
         <label class="checkout">
           <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
         </label>
-        <a href="registration.html"> Go Back </a>
+        <a href="purchase.html"> Go Back </a>
         <input type="submit" value="Continue to checkout" class="btn">
       </form>
     </div>
   </div>
   </div>
-</div>
   </body>
 </html>
