--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="utf-8">
     <title>The Bahamas!!</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
       <div class="headerText">
           <h1>The Bahamas</h1>
         <div class="navbar">
-          <a href="index.html" >Home</a> |<a href="registration.html">Book Now</a>
+          <a href="index.html" >Home</a> |<a href="purchase.html">Book Now</a>
       </div>
     </div>
   </div>
+
   </body>
 </html>
