--- a/purchase.html
+++ b/purchase.html
@@ -61,6 +61,11 @@
           <option value="Small Hope Bay Lodge">Small Hope Bay Lodge</option>
         </select>
           <input id="datepicker" /> Through <input id="pickerdate" />
+        </fieldset><br />
+        <fieldset style="font-size: 24px;">
+          <input type="radio" name="rooms" value="king">King Suite
+          <input type="radio" name="rooms" value="queen"> Queen Suite
+          <input type="radio" name="rooms" value="normal">Normal Room
         </fieldset>
         <input type="Submit" name="Submit" value="Submit" style="font-size: 24px;">
       </form>
