--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <title>The Bahamas!!</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
 
   <body>
@@ -21,8 +22,8 @@
       </div>
     </div>
   </div>
-  <div class="container">
-  <h2>Carousel Example</h2>
+
+<div class="container">
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -35,26 +36,21 @@
     <div class="carousel-inner">
 
       <div class="item active">
-        <img src="Image1.jpg" alt="Los Angeles" style="width:100%;">
+        <img src="Image1.png" alt="Overlook" style="width:100%; height:400px;">
         <div class="carousel-caption">
-          <h3>Los Angeles</h3>
-          <p>LA is always so much fun!</p>
         </div>
       </div>
 
       <div class="item">
-        <img src="Image2.jpg" alt="Chicago" style="width:100%;">
+        <img src="Image2.JPG" alt="Beach" style="width:100%;height:400px;">
         <div class="carousel-caption">
-          <h3>Chicago</h3>
-          <p>Thank you, Chicago!</p>
         </div>
       </div>
 
       <div class="item">
-        <img src="image3.jpg" alt="New York" style="width:100%;">
+        <img src="image3.jpg" alt="Poolside" style="width:100%;height:400px;">
         <div class="carousel-caption">
-          <h3>New York</h3>
-          <p>We love the Big Apple!</p>
+
         </div>
       </div>
 
