final changes done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
           <a href="index.html" >Home</a> |<a href="purchase.html">Book Now</a>
           <div class="container">
 
-
       </div>
     </div>
   </div>
@@ -67,6 +66,17 @@
     </a>
   </div>
 </div>
+</div>
+<br>
+<br>
+<div class="About">
+  <h2>About the Bahamas</h2>
+  <p>Bahamians love meeting new people and making friends.
+    When you join our complimentary People-To-People Experience,
+    you’ll be paired with a volunteer Bahamian host who will show you
+    our culture and way of life in a memorable, one-of-a-kind vacation experience.</p>
+
+LEARN MORE
 </div>
   </body>
 </html>
